fix: hide overflow

--- a/resources/css/site.scss
+++ b/resources/css/site.scss
@@ -16,6 +16,8 @@ body {
     padding-top: var(--header-height);
     box-sizing: border-box;
 
+    overflow-x: hidden;
+
     min-height: 100vh;
 }
 
